dbus (1.7.10-1) UNRELEASED; urgency=low

  * Merge from experimental into unstable
  * New upstream release 1.7.10 (1.8 rc1)

 -- Simon McVittie <smcv@debian.org>  Mon, 06 Jan 2014 19:08:53 +0000

dbus (1.7.8-1) experimental; urgency=low

  [ Laurent Bigonville ]
  * debian/rules: Re-add udeb_configure_flags that were lost during merge
    (Closes: #727774)

  [ Simon McVittie ]
  * Standards-Version: 3.9.5 (no changes needed)
  * Enable libaudit support so messages that violate SELinux policy go to the
    audit log (Closes: #727771)
  * New upstream release
    - add new dependency on libsystemd-journal-dev for linux-any

 -- Simon McVittie <smcv@debian.org>  Tue, 29 Oct 2013 13:07:02 +0000

dbus (1.7.6-2) experimental; urgency=low

  * debian/rules: FTBFS if new symbols or libraries are added
    without updating the symbols file
  * debian/copyright: list copyright holders and minor licenses
    (Closes: #726000)
  * Merge packaging changes from unstable:
    - Run `update-rc.d dbus defaults` instead of deprecated
      `update-rc.d dbus start ...` (Closes: #725923)
    - Add udeb packages, so the graphical installer can use AT-SPI
      (Closes: #723952)
    - Standards-Version: 3.9.4 (no changes needed)

 -- Simon McVittie <smcv@debian.org>  Sat, 12 Oct 2013 16:30:55 +0100

dbus (1.7.6-1) experimental; urgency=low

  * Standards-Version: 3.9.4 (no changes needed)
  * New upstream development release
    - update symbols

 -- Simon McVittie <smcv@debian.org>  Wed, 09 Oct 2013 16:44:43 +0100

dbus (1.7.4-1) experimental; urgency=low

  * New upstream development release
    - CVE-2013-2168: avoid a user-triggerable crash (denial of services)
      in system services that use libdbus

 -- Simon McVittie <smcv@debian.org>  Wed, 12 Jun 2013 19:53:00 +0100

dbus (1.7.2-1) experimental; urgency=low

  * New upstream development release
  * Do the debug build --with-valgrind on mipsel, too

 -- Simon McVittie <smcv@debian.org>  Thu, 25 Apr 2013 13:46:10 +0100
