@@ -1,1 +1,2 @@
 doc/dbus.devhelp
+debian/dbus.install
